2008-03-30  Brandon Hale <brandon@brandonhale.us>

	Some portability fixes.
	Apply a patch to not use memmem() on non-GNU systems.
	Silently catch failed calls to prctl when changing the process name on
	non-Linux. See Gnome bug #475031.

2008-03-29  Brandon Hale <brandon@brandonhale.us>

	Move account data from gconf to gnome-keyring.
	This encrypts your last.fm password.
	Patch by Łukasz Jernaś on Gnome Bug #517070.

2008-03-29  Brandon Hale <brandon@brandonhale.us>
	
	Incorporate a long desired feature to display running track time vs
	estimated track duration. This uses a label instead of an hscale, to
	keep grumpy Last Exit maintainers at bay. Slightly modified from a
	patch by Jordan Callicoat on Gnome Bug #490989.

2008-03-29  Brandon Hale <brandon@brandonhale.us>
	
	Properly dispose of gstreamer element when shutting down.
	Gnome Bug #524124, fix from Jordan Callicoat.

2008-03-26  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* notify-sharp/Makefile.am:
	* src/Makefile.am: Use an external notify-sharp if available. This
	is most important as the DBus interface of notification-daemon changes
	soonish and a notify-sharp is required for this.

2008-03-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/last-exit.exe.config.in: Add a few missing dllmaps.

2008-03-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/PlayerWindow.cs: Use Bacon.VolumeButton instead of just
	VolumeButton. Gtk# 2.12 has it's own VolumeButton now creating an
	ambiguous reference between the two and failing the build.

2008-02-24  Brandon Hale <brandon@brandonhale.us>

	* AUTHORS, COPYING:
	Updates, taken from Debian package. Thanks to Bob Mauchin on bug
	#496016.

	* Bug #448927:
	Crash when searching for a station due to differing locale handling of
	decimal numbers. Patch from Bob Mauchin.

	* Bug #465549:
	Another crash on matching strings on search. Patch from Bob Mauchin.

2008-02-19  Kjartan Maraas  <kmaraas@gnome.org>
